step 1.2.2 : implementation of account creation event

--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -40,6 +40,11 @@
             <version>3.4.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
 
     </dependencies>
 
